; ModuleID = '/home/carl/AnghaBench/openwrt/package/utils/otrx/src/extr_otrx.c_otrx_check_parse_options.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/utils/otrx/src/extr_otrx.c_otrx_check_parse_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"o:\00", align 1
@optarg = common dso_local global i32 0, align 4
@trx_offset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8**)* @otrx_check_parse_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @otrx_check_parse_options(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  br label %6

6:                                                ; preds = %16, %2
  %7 = load i32, i32* %3, align 4
  %8 = load i8**, i8*** %4, align 8
  %9 = call i32 @getopt(i32 %7, i8** %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %17

11:                                               ; preds = %6
  %12 = load i32, i32* %5, align 4
  switch i32 %12, label %16 [
    i32 111, label %13
  ]

13:                                               ; preds = %11
  %14 = load i32, i32* @optarg, align 4
  %15 = call i32 @atoi(i32 %14)
  store i32 %15, i32* @trx_offset, align 4
  br label %16

16:                                               ; preds = %11, %13
  br label %6

17:                                               ; preds = %6
  ret void
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @atoi(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
